Fixes sidebar alignment

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -66,14 +66,15 @@ body {
 
 .container {
   @include container;
-  padding-top: $nav-bar-height;
+  padding-top: $nav-bar-height + 5px;
   width: 100%;
   min-height: 100%;
   background: #fff;
 
   .sidebar {
+    width: 16%;
     position: fixed;
-    float: right;
+    right: 0px;
     height: 100%;
     background: $light-blue;
 
@@ -126,14 +127,15 @@ body {
   position: fixed;
   background: #fff;
 
-  .chatbox form {
-    @include column(20);
+  .chatbox {
+    width: 84%;
+    float: left;
 
     #message_content {
       margin: 5px;
       font-size: 13px;
       height: 40px;
-      width: 99%;
+      width: 98%;
       margin-right: 10px;
       @include linear-gradient(color-stops(white, white, #DDD), bottom);
       @include border-radius(4px);
@@ -141,7 +143,8 @@ body {
   }
 
   .actions {
-    @include column(4, last);
+    width: 16%;
+    float: right;
     margin-top: 10px;
   }
 }
